apply surface colors

--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -15,6 +15,7 @@ body {
 
 .Page {
   @include page-layout;
+  background-color: var(--surface-background, color('sky', 'light'));
 
   // Ensure bottom margins of any children are contained
   &::after {
